<resources>
    <string name="app_name">AppJAVA</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="_666">666</string>
    <string name="button">Button</string>
    <string name="finish_activity">Finish Activity</string>
    <string name="implicit_intents">调用系统的浏览器</string>
    <string name="send_data_to_last_activity">返回数据给上一个活动</string>
    <string name="linear_layout_demo">Demo列表</string>
    <string name="downloadService">DownloadService</string>
    <string name="channel_name">pp_channel_name</string>
    <string name="channel_description">pp_channel_description</string>


</resources>